feat: исправление ошибок в процессе работы сервиса
